fix some bug css

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="container">
                 <div class="footer__info">
                     <div class="footer__logo">
-                        <h1 class="footer__logo-text">Pathway<span>.</span></h1>
+                        <a href="#" class="footer__logo-text">Pathway<span>.</span></a>
                     </div>
                     <p class="footer__slogan">Need to help for your dream trip? trust us. With Walter, travel becomes a lot easier with us.</p>
                     <div class="footer__socials">
