--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="header__nav">
                     <ul class="header__nav-list">
-                        <li class="active"><a href="" >Home</a></li>
+                        <li class=""><a href="" >Home</a></li>
                         <li><a href="#slider" >Descriptions</a></li>
                         <li><a href="#booking" >Pricing</a></li>
                         <li><a href="#gallery">Review</a></li>
