--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                     <input type="text" class="subcribe__input" placeholder="Enter Your Email">
                     <button class="btn subcribe__btn">Get started</button>
                 </div>
+                <div class="subcribe__bg-image"></div>
             </div>
         </div>
     </section>
