--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="wrapper">
             <div class="container">
                 <div class="header__logo">
-                    <a href="" class="header__logo-text">Pathway</a>
+                    <a href="" class="header__logo-text">Pathway<span>.</span></a>
                 </div>
                 <div class="header__search">
                     <div class="header__search-icon">
