--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 </head>
@@ -31,6 +32,10 @@
                     </div>
                 </div>
                 <div class="header__nav">
+                    <div class="header__nav-hamburger">
+                        <div class="header__nav-bar">
+                        </div>
+                    </div>
                     <ul class="header__nav-list">
                         <li class=""><a href="" >Home</a></li>
                         <li><a href="#slider" >Descriptions</a></li>
